[gd_scene load_steps=6 format=3 uid="uid://dejtaa7s52uyr"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_b4xwq"]

[sub_resource type="LabelSettings" id="LabelSettings_34oib"]
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ldfvj"]
size = Vector3(10, 10, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4gy14"]
albedo_color = Color(0.716296, 0.716296, 0.716296, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_cy7sn"]
material = SubResource("StandardMaterial3D_4gy14")
size = Vector2(100, 100)

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_b4xwq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera3D" type="Camera3D" parent="Control"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.28274, 7.80276)

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_top = 72.0
offset_right = 450.0
offset_bottom = 160.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Cosmic Corps Combat Classic"
label_settings = SubResource("LabelSettings_34oib")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 320
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Versus" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01
text = "Versus"

[node name="Settings" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Training" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Training"

[node name="Credits" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.61874, 26.2294, 4.93054)
light_energy = 1.312

[node name="Environment" type="Node3D" parent="."]

[node name="Wall" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.55053, -10.8046)
mesh = SubResource("BoxMesh_ldfvj")
skeleton = NodePath("../..")

[node name="Floor" type="MeshInstance3D" parent="Environment"]
mesh = SubResource("PlaneMesh_cy7sn")

[node name="Label3D" type="Label3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.84068, -9.84998)
modulate = Color(1, 0.627451, 0.141176, 1)
text = "SoCal City under Construction"
font_size = 86

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Versus" to="." method="_on_versus_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Training" to="." method="_on_training_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
